--- a/wiki/DESCRIPTION.wiki
+++ b/wiki/DESCRIPTION.wiki
@@ -105,15 +105,15 @@ Module to download youtube video for a limited amount of time and calculate the
 different statistics needed for the analysis. It has the FileDownloader class 
 and the Youtube InfoExtractor class. The following functions defined in this module are used to get the statistics of the download.  
 
-**Usage**
+*Usage*
     Terminal:
         python libyoutubedownload.py url
 
-**Functions**
-    **getyoutubecacheurl(url):**
+*Functions*
+    *getyoutubecacheurl(url):*
         Return the cache url of the youtube video.
 
-    **getdownloadstats(ipaddressuri, downloadtime=DOWNLOADTIME):**
+    *getdownloadstats(ipaddressuri, downloadtime=DOWNLOADTIME):*
         Returns a tuple of stats for download from an url based on ip 
         address. The tuple contains stats containing: [downloadtime, 
         data duration, datalength, video encodingrate, size of video in bytes,
@@ -126,16 +126,16 @@ Module to retrieve the IP address of a URL out of a set of
 nameservers(default nameservers and the ones provided in the
 configpytomo file as EXTRANAMESERVERS)
             
-**Usage**
+*Usage*
     Not meant to be called directly. But provides the two functions
     discussed below.
 
-**Functions**
+*Functions*
 
-    **getdefaultnameservers():**
+    *getdefaultnameservers():*
         Returns a list of IP addresses of default name servers.
         
-    **getipaddresses(url):**
+    *getipaddresses(url):*
         Return a list of tuples with the IP address and the DNS resolver
         used.
 
@@ -143,12 +143,12 @@ configpytomo file as EXTRANAMESERVERS)
 
 Module to generate the RTT times of a ping.
     
-**Usage**
+*Usage*
     Not meant to be called directly. But provides the two functions
     discussed below.
             
-**Functions**
-    **pingip(ipaddress, [pingpackets=configpytomo.PINGPACKETS]):**
+*Functions*
+    *pingip(ipaddress, [pingpackets=configpytomo.PINGPACKETS]):*
         Returns a list of the min, avg and max ping values. Currently 
         designed to work with Windows and Linux systems.
                    
@@ -157,7 +157,7 @@ Module to generate the RTT times of a ping.
 Module to retrieve the related videos from a file with a list of 
 Youtube links and to store it for next round of the crawl.  
 
-**Usage**
+*Usage*
     Terminal: 
         libcacheurl.py [-w outfile] [-p 10] [-u 2] [-V] urlfilein
                 
@@ -167,34 +167,34 @@ Youtube links and to store it for next round of the crawl.
         | libcacheurl.getnextroundurls(urlfilein, [maxperpage=20,
             maxperurl=5, outfilename=None, pickleoutput=False])
 
-**Arguments**
-    **urlfilein:** 
+*Arguments*
+    *urlfilein:* 
         File with a list of URLs to crawl (only Youtube is implemented).
-    **maxperpage:**
+    *maxperpage:*
         Number of links to consider per page(only the first MAXPERPAGE 
         related video links will be considered).
-    **maxperurl:** 
+    *maxperurl:* 
         Number of links to select per page (MAXPERURL links 
         will be randomly selected out of the MAXPERPAGE
         considered).
-    **outfilename:**
+    *outfilename:*
         File name to store the list of related video urls.
-    **pickleoutput:** 
+    *pickleoutput:* 
         Boolean to tell if the file is a pickle file or a text
         file
 
-**Functions**
-    **getalllinks(url):**
+*Functions*
+    *getalllinks(url):*
         Returns a list of all links from the url.
-    **getyoutubelinks(url, maxperpage):**
+    *getyoutubelinks(url, maxperpage):*
         Returns a set of links that direct to Youtube. All the
-    **trunkurl(url):**
+    *trunkurl(url):*
         Returns the interesting part of a Youtube url(the url with
         only the video ID).
-    **getrelatedurls(url, maxperpage, maxperurl):**
+    *getrelatedurls(url, maxperpage, maxperurl):*
         Return a set of maxperurl links from maxperpage randomly
         chosen related urls (other links are ignored).
-    **getnextroundurls(inputlinks, maxperpage=20, maxperurl=5):**
+    *getnextroundurls(inputlinks, maxperpage=20, maxperurl=5):*
         Return a tuple of the set of input urls and a set of related url of
         videos.
        
@@ -202,15 +202,15 @@ Youtube links and to store it for next round of the crawl.
 
 Function to get the most popular Youtube videos according to the time frame.
  
-**Usage**
+*Usage*
     Not meant to be called directly. But provides one function as discussed 
     below.
 
-**Arguments**
+*Arguments*
     time = 'today' or 'month' or 'week' or alltime'.
     maxresults = Total top videos needed (in  multiples of 25)
-**Function**
-    **getpopularlinks(time='today', maxresults=25):**
+*Function*
+    *getpopularlinks(time='today', maxresults=25):*
         Returns the most popular youtube links(world-wide). The number of 
         videos needed is given as maxresults. (The results returned are in 
         no particular order).
@@ -221,23 +221,23 @@ Module that creates and manages the database for th Pytomo results. It has
 a PytomoDatabase class.The columns of the database are listed in the docstring 
 of the module.
 
-**Usage**
+*Usage*
     Not meant to be called directly but the PytomoDatabase class is to be 
     used.
 
-**Functions**
+*Functions*
 The PytomoDatabase class has the following functions:
 
-    **createpytomotable(self, table=configpytomo.TABLETIMESTAMP):**
+    *createpytomotable(self, table=configpytomo.TABLETIMESTAMP):*
         Function to create a table.
 
-    **insertrecord(self, row):**
+    *insertrecord(self, row):*
         Function to insert a record into the database.
 
-    **fetchall(self):**
+    *fetchall(self):*
         Function to print all the records of the table.
 
-    **closehandle(self):**
+    *closehandle(self)*
         Closes the connection to the database.
 
 ==kaametadata==
