--- a/wiki/DESCRIPTION.wiki
+++ b/wiki/DESCRIPTION.wiki
@@ -37,13 +37,15 @@ The top-most module that is used to run the Pytomo tool.
         
 ====Usage====
     Terminal: 
+{{{
         python start_pytomo.py
+}}}
     Interactive python:
-        {{{
+{{{
         import start_pytomo.main
         import config_pytomo
         startpytomo.main()
-        }}}     
+}}}     
 ====Functions====
     
   * *computestats(url)*: Return a list of the statistics related to the url. The contents of the list are : (url, cache_url, current_stats) where currentstats is a list containing: [Ping_times, download_statistics, DNS resolver used]
@@ -66,9 +68,7 @@ analysis. The following parameters determine the nature of the crawl.
   * MAXCRAWLEDURLS = Max number of urls to be visited.
   * MAXPERURL =  Max number of related videos to be selected  from each url.
   * MAXPERPAGE = Max number of related videos to be considered for selection from each page
-  * EXTRANAMESERVERS = A list containing the name of the resolver and its IP
-                          address. This resolver will be used to get the IP 
-                          address of the youtube cache
+  * EXTRANAMESERVERS = A list containing the name of the resolver and its IP address. This resolver will be used to get the IP address of the youtube cache.
   * PINGPACKETS = Nb, of ping packets to be sent.
   * DOWNLOADTIME = The duration for which the video must be downloaded.
   * BUFFERINGVIDEODURATION = The duration for which the video is to be
@@ -81,8 +81,7 @@ analysis. The following parameters determine the nature of the crawl.
   * TABLE = The name of the result table.
   * LOGDIR = The directory to store the log files. 
   * LOGFILE = The file to store the logs.
-  * LOGLEVEL = Parameter to set the log level(choose from DEBUG, INFO, WARNING,
-                 ERROR and CRITICAL)
+  * LOGLEVEL = Parameter to set the log level(choose from DEBUG, INFO,               WARNING,ERROR and CRITICAL)
 
 ===libyoutubedownload.py===
 
